<resources>
    <string name="app_name">DatesInIntelligentClothes</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="information_button">Info</string>
    <string name="no_date">You do\'t have any date for today.</string>
    <string name="find_date">Let\'s find date!</string>
    <string name="find_lover_information">I\'m searching for your lover!</string>

    <string name="today_dates">Today dates</string>
    <string name="update_look">Update my look</string>
    <string name="update_preferences">Update my preferences</string>
    <string name="profile_information">Profile</string>

    <string name="save_changes">SAVE CHANGES</string>
    <string name="changes_saved">Changes saved successfully.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_today_date">TodayDateActivity</string>
    <string name="title_activity_updrage_preferences">UpdragePreferencesActivity</string>
    <string name="title_activity_upgrade_look">UpgradeLookActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="profile_activity_nickname">Nickname:</string>
    <string name="profile_activity_gender">Gender:</string>
    <string name="profile_activity_age">Age:</string>
    <string name="profile_activity_location">Location:</string>
    <string name="profile_activity_location_lattitude">Lattitude:</string>
    <string name="profile_activity_location_longitude">Longitude:</string>
    <string name="profile_activity_size">Size:</string>
</resources>
