<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/todayDatesItem"
            android:checked="false"
            android:icon="@drawable/calendar_clock"
            android:title="@string/today_dates" />

        <item
            android:id="@+id/findDateItem"
            android:checked="false"
            android:icon="@drawable/heart"
            android:title="@string/find_date" />

        <item
            android:id="@+id/updateLookItem"
            android:checked="false"
            android:icon="@drawable/arrow_up_bold_circle"
            android:title="@string/update_look" />

        <item
            android:id="@+id/updatePreferencesItem"
            android:checked="false"
            android:icon="@drawable/arrow_up_bold_circle"
            android:title="@string/update_preferences" />

        <item
            android:id="@+id/profileInformationItem"
            android:checked="false"
            android:icon="@drawable/clipboard_account"
            android:title="@string/profile_information" />

    </group>
</menu>