<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:title="@string/title_activity_profile" />

            </android.support.design.widget.AppBarLayout>

            <TextView
                android:id="@+id/profileNickanmeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_activity_nickname"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/profileNickanmeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profileAgeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_activity_age"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/profileAgeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profileGenderTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_activity_gender"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/profileGenderMaleRadioButton"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="MALE" />

                <RadioButton
                    android:id="@+id/profileGenderFemaleRadioButton"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="FEMALE" />

            </LinearLayout>

            <TextView
                android:id="@+id/profileLocationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_activity_location"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profileLocationLongitudeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_activity_location_longitude"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/profileLocationLongitudeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profileLocationLattitudeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_activity_location_lattitude"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/profileLocationLattitudeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/profilSizeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_activity_size"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/profileSizeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/profileSaveChangesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_changes" />

        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawer" />

</android.support.v4.widget.DrawerLayout>